# pcq

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  glama.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AGENT_ACCEPTANCE_CHECKLIST.md  AGENT_OPERABILITY.md  AGENT_OPERATING_GUIDE.md  ATOM_REGISTRY.md  CQ_MCP_SPEC.md  CQ_YAML_RUNTIME_CONTRACT.md  INTRODUCTION.md  JSON_CONTRACTS.md  MCP_INTEGRATION.md  PCQ_COMPLETION_ROADMAP.md  RUN_RECORD.md  SPEC.md  STRICTNESS.md  TC_RECONCILIATION.md  V4_DIRECTION.md  VISION.md  WORKER_EXECUTION_FLOW.md
docs/case-studies/: cq-worker-dogfood-2026-05-10.md  mcp-dogfood-2026-05-10.md  mnist-dogfood-2026-05-08.md  tabular-dogfood-2026-05-09.md
examples/: contract_huggingface.cq.yaml  contract_huggingface.py  contract_numpy.cq.yaml  contract_numpy.py  contract_pytorch.cq.yaml  contract_pytorch.py  contract_pytorch_lightning.cq.yaml  contract_pytorch_lightning.py  contract_sklearn.cq.yaml  contract_sklearn.py  cq.yaml  train.py
scripts/: export_schemas.py  release-smoke.sh
site/: agent-manifest.json  index.html  index.ko.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml  styles.css
skills/pcq/: SKILL.md
spec/: CONFORMANCE.md  CQ_MCP_SPEC.md  IMPLEMENTATIONS.md  INDEX.md  JSON_CONTRACTS.md  SPEC.md  STRICTNESS.md  VERSIONING.md
spec/schemas/: pcq.agent_install.result.schema.json  pcq.agent_status.result.schema.json  pcq.compare_runs.diff.schema.json  pcq.describe_run.record.schema.json  pcq.run.envelope.schema.json  pcq.run.event.schema.json  pcq.validation_report.schema.json
src/pcq/: __init__.py  _registry.py  cli.py  contract.py  core.py  datasets.py  experiment.py  fingerprint.py  loss.py  models.py  optim.py  sched.py  testing.py  trainer.py
src/pcq/agent/: __init__.py  apply.py  compare.py  describe.py  failure_classifier.py  init.py  inspect.py  install.py  json_contracts.py  lineage.py  plan.py  resolver.py  run_record.py  scaffold.py  schema.py  smoke.py  strictness.py  summary.py  validate.py  validate_run.py  yaml_io.py
src/pcq/agent_assets/: AGENTS.pcq.md  __init__.py
src/pcq/examples/: __init__.py  (+4 more)
templates/: AGENTS.pcq.md
tests/: test_acceptance.py  test_agent_inspect.py  test_agent_install.py  test_agent_meta.py  test_agent_summary.py  test_agent_validate.py  test_apply_plan.py  test_atom_role.py  test_atom_source.py  test_atom_spec.py  test_atom_validation.py  test_atoms.py  test_atoms_meta.py  test_attribution.py  test_cli.py  test_compare_runs.py  test_compare_runs_config.py  test_config_fallback.py  test_contract_helpers.py  test_core.py  test_describe_run.py  test_examples_namespace.py  test_experiment.py  test_failure_classifier.py  test_failure_envelope.py  test_fingerprint.py  test_framework_neutral_examples.py  test_golden_e2e.py  test_init_experiment.py  test_init_styles.py  test_inspect_empty_dir.py  test_inspect_manifest_schema.py  test_inspect_script_aware.py  test_inspect_structured_yaml.py  test_integration.py  test_intent_integrity.py  test_json_contracts.py  test_lineage.py  test_load_project_atoms.py  test_manifest_v2.py  (+32 more)
tests/conformance/: test_conformance.py
(+87 files in other folders)
