[project]
name = "pcq"
version = "3.0.2"
description = "pcq - agent-operable ML experiment contract library"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "pcq contributors"},
]
keywords = ["ml", "machine-learning", "cq", "experiment", "agent", "reproducibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dist = ["accelerate>=0.30"]
vision = [
    "timm>=1.0",
    "torchvision>=0.26.0",
]
nlp = ["transformers>=4.40"]
yaml = [
    "ruamel-yaml>=0.17",
]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://playidea-lab.github.io/pcq/"
Documentation = "https://playidea-lab.github.io/pcq/"
Repository = "https://github.com/playidea-lab/pcq"
Source = "https://github.com/playidea-lab/pcq"
Changelog = "https://github.com/playidea-lab/pcq/blob/main/CHANGELOG.md"

[project.scripts]
pcq = "pcq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcq"]
