[project]
name = "pcq"
version = "4.3.0"
description = "pcq - contract runtime + agent CLI surface for CQ ML experiments"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "pcq contributors"},
]
keywords = ["ml", "machine-learning", "cq", "experiment", "agent", "reproducibility", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "psutil>=5.9",
    "ruamel-yaml>=0.17",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
mcp = ["mcp>=0.5"]
dev = ["pytest>=8.0", "ruff>=0.5", "torch>=2.0", "mcp>=0.5"]

[project.urls]
Homepage = "https://playidea-lab.github.io/pcq/"
Documentation = "https://playidea-lab.github.io/pcq/"
Repository = "https://github.com/playidea-lab/pcq"
Source = "https://github.com/playidea-lab/pcq"
Changelog = "https://github.com/playidea-lab/pcq/blob/main/CHANGELOG.md"

[project.scripts]
pcq = "pcq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcq"]

[dependency-groups]
dev = [
    "joblib>=1.5.3",
    "scikit-learn>=1.7.2",
]
